--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Batman</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Roboto:wght@400;900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -35,7 +37,23 @@
             <img src="img/poster.jpg" alt="profile_photo">
         </a>
     </header>
-
+    <section class="title center">
+        <h1 class="title__name">Бэтмен</h1>
+        <p class="title__name-eng">Batman</p>
+        <div class="title__info">
+            <div class="tittle__film-button">Фильм</div>
+            <p class="title__country">США, 2021 год</p>
+            <a href="" class="title__play-button">
+                <img src="img/play.svg" alt="">
+            </a>
+            <a href="#" class="title__watch-trailer">Смотреть трейлер</a>
+            <a href="#" class="title__more">Подробнее</a>
+            <a href="#" class="title__more-button">
+                <img src="img/play.svg" alt="">
+            </a>
+        </div>
+    </section>
+    <div class="footer"></div>
 </body>
 
 </html>
